--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "16.8.6",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^4.0.5",
+    "react-navigation-stack": "^1.7.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.2.0",
